# zk-regex

./: Cargo.toml  README.md
examples/: regex.rs
src/: defs.rs  lib.rs  table.rs
test_regexes/: regex2_test.json  regex2_test_lookup.txt  regex4_test.json
